Fix the alignment of the close button in the opt_out bar

--- a/app/assets/stylesheets/components/_opt_out.scss
+++ b/app/assets/stylesheets/components/_opt_out.scss
@@ -9,11 +9,15 @@
   &.is-hidden {
     display: none;
   }
+
+  .l-constrained {
+    position: relative;
+  }
 }
 
 .opt-out__message {
   @extend %type-small;
-  margin: $baseline-unit*2 0 0 0;
+  margin: $baseline-unit*2 $baseline-unit 0 0;
 
   @include respond-to($mq-m) {
     float: left;
@@ -33,7 +37,6 @@
     text-decoration: underline;
   }
 }
-
 
 .opt-out__close {
   @extend .button--unstyled;
